tests/hevm/fail/redundant/redundant.sol
contract A {
    uint x;
    function f() external {
        x = 2;
    }
}
